# c_ogl_wrapper

./: CMakeLists.txt
examples/triangle/: CMakeLists.txt  main.c
include/: c_ogl_wrapper.h  gl_info.h  glad_wrapper.h  shader.h  vertex_array.h  vertex_buffer.h  window.h
src/: gl_info.c  glad_wrapper.c  shader.c  vertex_array.c  vertex_buffer.c  window.c
